#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.68)
#AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_INIT(updateloader, 0.2, lizelaing.linux@gmail.com)
AM_INIT_AUTOMAKE(updateloader, 0.2, lizeliang.linux@gmail.com)

AC_CONFIG_SRCDIR([include/updateloader.h])
AC_CONFIG_SRCDIR([src/comops.c])
AC_CONFIG_SRCDIR([src/updateloader.c])

AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h termios.h unistd.h getopt.h libgen.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
